syntax = "proto3";

package resonance.logic.v1;

option go_package = "github.com/ceyewan/resonance/api/gen/go/logic/v1;logicv1";

// ChatService 处理聊天相关的请求，上行消息由网关转发到 Logic
service ChatService {
  // SendMessage 处理来自网关的上行消息 (Unary 调用)
  // Gateway 发送消息，Logic 返回处理结果（Response 即为 ACK）
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
}

message SendMessageRequest {
  // 1, 2 预留给 id, seq
  string session_id = 3;
  string from_username = 4;
  string to_username = 5;
  string content = 6;
  string type = 7;
  int64 timestamp = 8;
}

message SendMessageResponse {
  int64 msg_id = 1; // 对应消息ID
  int64 seq_id = 2; // 对应消息序号
  string error = 3; // 错误信息
}
